--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,27 @@ version: '3.8'
 
 services:
   backend:
-    image: AutoSummarize-dotnet-api:latest
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
-    ports:
-      - "8080:80"
+    env_file: .env
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
+    ports:
+      - "${ASPNETCORE_HTTP_PORTS}:${ASPNETCORE_HTTP_PORTS}"
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    env_file: .env
+    ports:
+      - "${FRONTEND_PORT}:80"
+
+  java-backend:
+    build:
+      context: ./java-backend
+      dockerfile: Dockerfile
+    env_file: .env
+    ports:
+      - "${JAVA_BACKEND_PORT}:8080"
