Enhance frontend and backend integration with environment variables and UI updates

--- a/example.env
+++ b/example.env
@@ -1,3 +1,10 @@
+# Backend
 ASPNETCORE_HTTP_PORTS=5000
-FRONTEND_PORT=5555
+
+# Java-Backend
 JAVA_BACKEND_PORT=4500
+
+# Frontend
+FRONTEND_PORT=5555
+DOTNET_SERVICE_URL=http://localhost:5000
+JAVA_SERVICE_URL=http://localhost:4500
