--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-version: '3.8'
+version: "3.8"
 
 services:
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
+      args:
+        - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
+        - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
     env_file: .env
-    environment:
-      - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
     ports:
       - "${ASPNETCORE_HTTP_PORTS}:${ASPNETCORE_HTTP_PORTS}"
 
@@ -15,14 +16,17 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_DOTNET_SERVICE_URL=${VITE_DOTNET_SERVICE_URL}
+        - VITE_JAVA_SERVICE_URL=${VITE_JAVA_SERVICE_URL}
     env_file: .env
     ports:
       - "${FRONTEND_PORT}:80"
 
-  java-backend:
-    build:
-      context: ./java-backend
-      dockerfile: Dockerfile
-    env_file: .env
-    ports:
-      - "${JAVA_BACKEND_PORT}:8080"
+  # java-backend:
+  #   build:
+  #     context: ./java-backend
+  #     dockerfile: Dockerfile
+  #   env_file: .env
+  #   ports:
+  #     - "${JAVA_BACKEND_PORT}:8080"
