--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,29 @@
-FROM node:alpine as build-stage
+FROM node:alpine as builder
 
-WORKDIR /app
+WORKDIR /usr/src/app
+ENV PATH /usr/src/node_modules/.bin:$PATH
+
+# inject all environment vars we'll need
+ARG VITE_DOTNET_SERVICE_URL
+ARG VITE_JAVA_SERVICE_URL
+# expose the variable to the finished container
+ENV VITE_DOTNET_SERVICE_URL=${VITE_DOTNET_SERVICE_URL}
+ENV VITE_JAVA_SERVICE_URL=${VITE_JAVA_SERVICE_URL}
 
 COPY package*.json ./
 RUN npm install
 
 COPY . .
 
+FROM builder as dev
+CMD ["npm", "run", "dev"]
+
+FROM builder as prod-builder
 RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=prod-builder /usr/src/app/dist /usr/share/nginx/html
 
 EXPOSE 80
 
