--- a/example.env
+++ b/example.env
@@ -1,10 +1,11 @@
 # Backend
 ASPNETCORE_HTTP_PORTS=5000
+ALLOWED_ORIGINS="http://localhost:5555"
 
 # Java-Backend
 JAVA_BACKEND_PORT=4500
 
 # Frontend
 FRONTEND_PORT=5555
-DOTNET_SERVICE_URL=http://localhost:5000
-JAVA_SERVICE_URL=http://localhost:4500
+VITE_DOTNET_SERVICE_URL="http://localhost:5000"
+VITE_JAVA_SERVICE_URL="http://localhost:4500"
