--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,33 @@ version: "3.8"
 
 services:
   backend:
+    env_file: .env
     build:
       context: ./backend
       dockerfile: Dockerfile
-      args:
-        - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
-        - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
-    env_file: .env
+    environment:
+      - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
     ports:
       - "${ASPNETCORE_HTTP_PORTS}:${ASPNETCORE_HTTP_PORTS}"
 
   frontend:
+    env_file: .env
     build:
       context: ./frontend
       dockerfile: Dockerfile
       args:
         - VITE_DOTNET_SERVICE_URL=${VITE_DOTNET_SERVICE_URL}
         - VITE_JAVA_SERVICE_URL=${VITE_JAVA_SERVICE_URL}
-    env_file: .env
     ports:
       - "${FRONTEND_PORT}:80"
 
-  # java-backend:
-  #   build:
-  #     context: ./java-backend
-  #     dockerfile: Dockerfile
-  #   env_file: .env
-  #   ports:
-  #     - "${JAVA_BACKEND_PORT}:8080"
+  java-backend:
+    env_file: .env
+    build:
+      context: ./java-backend
+      dockerfile: Dockerfile
+    environment:
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
+    ports:
+      - "${JAVA_BACKEND_PORT}:8080"
