--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.8"
 
 services:
   backend:
+    image: judgementhc/autosummarize-backend:latest
     env_file: .env
     build:
       context: ./backend
@@ -13,6 +14,7 @@ services:
       - "${ASPNETCORE_HTTP_PORTS}:${ASPNETCORE_HTTP_PORTS}"
 
   frontend:
+    image: judgementhc/autosummarize-frontend:latest
     env_file: .env
     build:
       context: ./frontend
@@ -24,6 +26,7 @@ services:
       - "${FRONTEND_PORT}:80"
 
   java-backend:
+    image: judgementhc/autosummarize-java-backend:latest
     env_file: .env
     build:
       context: ./java-backend
