--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -24,6 +25,7 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/eslint-plugin": "1.1.18",
     "@vue/eslint-config-prettier": "^10.1.0",
@@ -37,6 +39,7 @@
     "prettier": "^3.4.2",
     "typescript": "~5.7.2",
     "vite": "^6.0.3",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-vue-devtools": "^7.6.8",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10"
