--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,9 +39,11 @@
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
     "typescript": "~5.7.2",
+    "unplugin-vue-router": "^0.10.9",
     "vite": "^6.0.3",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-vue-devtools": "^7.6.8",
+    "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10"
   }
