--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -5,7 +5,7 @@
 	"tabWidth": 2,
 	"trailingComma": "es5",
 	"printWidth": 100,
-	"endOfLine": "auto",
+	"endOfLine": "lf",
 	"arrowParens": "always",
 	"bracketSpacing": true,
 	"embeddedLanguageFormatting": "auto",
