--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,6 @@
 		"format": "npm-run-all -p lint:fix prettier"
 	},
 	"dependencies": {
-		"@mdi/font": "^7.4.47",
 		"@nuxt/eslint": "^0.7.4",
 		"@nuxtjs/tailwindcss": "^6.12.2",
 		"@pinia/nuxt": "^0.9.0",
@@ -32,8 +31,6 @@
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"typescript": "^5.7.2",
-		"vite-plugin-vuetify": "^2.0.4",
-		"vue-tsc": "^2.1.10",
-		"vuetify": "^3.7.6"
+		"vue-tsc": "^2.1.10"
 	}
 }
