--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@nuxt/eslint": "^0.7.4",
+		"@nuxt/icon": "^1.10.3",
 		"@nuxtjs/tailwindcss": "^6.12.2",
 		"@pinia/nuxt": "^0.9.0",
 		"@vite-pwa/nuxt": "^0.10.6",
@@ -25,6 +26,8 @@
 		"vue-router": "latest"
 	},
 	"devDependencies": {
+		"@iconify-json/uil": "^1.2.3",
+		"daisyui": "^4.12.23",
 		"eslint-plugin-prettier": "^5.2.1",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.4.2",
