--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"@nuxtjs/tailwindcss": "^6.12.2",
 		"@pinia/nuxt": "^0.9.0",
 		"@vite-pwa/nuxt": "^0.10.6",
+		"@vueuse/nuxt": "^12.3.0",
 		"eslint": "^9.17.0",
 		"nuxt": "^3.15.1",
 		"pinia": "^2.3.0",
