--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@iconify-json/uil": "^1.2.3",
+		"@tailwindcss/typography": "^0.5.16",
 		"daisyui": "^4.12.23",
 		"eslint-plugin-prettier": "^5.2.1",
 		"npm-run-all": "^4.1.5",
