--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
 		"nuxt": "^3.15.1",
 		"pinia": "^2.3.0",
 		"vue": "latest",
-		"vue-router": "latest"
+		"vue-router": "latest",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@iconify-json/uil": "^1.2.3",
