--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
 		"@vite-pwa/nuxt": "^0.10.6",
 		"@vueuse/nuxt": "^12.3.0",
 		"eslint": "^9.17.0",
+		"firebase": "^11.3.0",
 		"nuxt": "^3.15.1",
 		"pinia": "^2.3.0",
+		"ts-fsrs": "^4.6.1",
 		"vue": "latest",
 		"vue-router": "latest",
 		"zod": "^3.24.1"
