--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,68 @@
-version: "3.8"
+version: '3.8'
+
+networks:
+  web-network:
+    driver: bridge
 
 services:
-  backend:
-    image: judgementhc/ai-vocabulary-builder-backend:latest
-    env_file: .env
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    environment:
-      - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
-      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
-    ports:
-      - "${ASPNETCORE_HTTP_PORTS}:${ASPNETCORE_HTTP_PORTS}"
+  # backend:
+  #   build: ./backend
+  #   restart: always
+  #   environment:
+  #     - GO_ENV=production
+  #     - PORT=8080
+  #   expose:
+  #     - "8080"
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 512M
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-size: "50m"
+  #       max-file: "3"
 
   frontend:
-    image: judgementhc/ai-vocabulary-builder-frontend:latest
-    env_file: .env
     build:
       context: ./frontend
       dockerfile: Dockerfile
-      args:
-        - VITE_DOTNET_SERVICE_URL=${VITE_DOTNET_SERVICE_URL}
+      target: prod
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      resources:
+        limits:
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "3"
     ports:
-      - "${FRONTEND_PORT}:80"
+      - "3000:3000"
+    networks:
+      - web-network
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
+    healthcheck:
+      test: ["CMD", "wget", "-q", "-O", "/dev/null", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # nginx:
+  #   image: nginx:alpine
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
+  #   networks:
+  #     - web-network
+  #   depends_on:
+  #     - frontend
+
