--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
+      - name: Install rsync
+        run: sudo apt-get update && sudo apt-get install -y rsync
+      
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.7.0
         with:
