--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 		"@nuxt/icon": "^1.10.3",
 		"@nuxtjs/tailwindcss": "^6.12.2",
 		"@pinia/nuxt": "^0.9.0",
+		"@sentry/nuxt": "^9.1.0",
 		"@vite-pwa/nuxt": "^0.10.6",
 		"@vueuse/nuxt": "^12.3.0",
 		"eslint": "^9.17.0",
