--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 networks:
   web-network:
@@ -65,4 +65,3 @@ services:
   #     - web-network
   #   depends_on:
   #     - frontend
-
