--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 		"build": "nuxt build",
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
+		"start": "node --import ./.output/server/sentry.server.config.mjs .output/server/index.mjs",
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
 		"lint": "eslint .",
@@ -41,5 +42,8 @@
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"typescript": "^5.7.2",
 		"vue-tsc": "^2.1.10"
+	},
+	"overrides": {
+		"@vercel/nft": "^0.27.4"
 	}
 }
