--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,7 @@ COPY . .
 RUN npm run build
 
 # Use distroless Node.js image for production for minimal, secure runtime
-FROM gcr.io/distroless/nodejs22-debian12 AS prod
+FROM node:22.12.0-alpine AS prod
 
 # Set working directory in production container
 WORKDIR /app
