--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"@pinia/nuxt": "^0.9.0",
 		"@vite-pwa/nuxt": "^0.10.6",
 		"@vueuse/nuxt": "^12.3.0",
+		"dexie": "^4.0.11",
 		"eslint": "^9.17.0",
 		"firebase": "^11.3.0",
 		"nuxt": "^3.15.1",
