--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       target: prod
+    restart: always
     deploy:
       restart_policy:
         condition: on-failure
