--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,27 +5,9 @@ networks:
     driver: bridge
 
 services:
-  # backend:
-  #   build: ./backend
-  #   restart: always
-  #   environment:
-  #     - GO_ENV=production
-  #     - PORT=8080
-  #   expose:
-  #     - "8080"
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 512M
-  #   logging:
-  #     driver: "json-file"
-  #     options:
-  #       max-size: "50m"
-  #       max-file: "3"
-
   frontend:
     build:
-      context: ./frontend
+      context: .
       dockerfile: Dockerfile
       target: prod
     restart: always
@@ -38,32 +20,20 @@ services:
         limits:
           memory: 512M
     logging:
-      driver: "json-file"
+      driver: 'json-file'
       options:
-        max-size: "50m"
-        max-file: "3"
+        max-size: '50m'
+        max-file: '3'
     ports:
-      - "3000:3000"
+      - '3000:3000'
     networks:
       - web-network
     environment:
       - NODE_ENV=production
       - PORT=3000
     healthcheck:
-      test: ["CMD", "wget", "-q", "-O", "/dev/null", "http://localhost:3000"]
+      test: ['CMD', 'wget', '-q', '-O', '/dev/null', 'http://localhost:3000']
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
-
-  # nginx:
-  #   image: nginx:alpine
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
-  #   networks:
-  #     - web-network
-  #   depends_on:
-  #     - frontend
-
