--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,6 @@
-version: '3.8'
-
-networks:
-  web-network:
-    driver: bridge
-
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: prod
+    image: voca-ai:latest
     restart: always
     deploy:
       restart_policy:
@@ -19,21 +10,9 @@ services:
       resources:
         limits:
           memory: 512M
-    logging:
-      driver: 'json-file'
-      options:
-        max-size: '50m'
-        max-file: '3'
     ports:
       - '3000:3000'
-    networks:
-      - web-network
     environment:
       - NODE_ENV=production
       - PORT=3000
-    healthcheck:
-      test: ['CMD', 'wget', '-q', '-O', '/dev/null', 'http://localhost:3000']
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      - NODE_OPTIONS=--max-old-space-size=4096
